# SystemIntegration

./: .gitignore  LICENSE  README.md
01._Miscellanceous/: getgooglehomepage.sh  paymentiframe.html
02._Data_Files/: app.js  main.py  me.csv  me.json  me.txt  me.xml  package-lock.json  parser.js  parser.py  pyproject.toml  read_and_parse.py
03._Modules/html_no_modules/: index.html  myModule.js
03._Modules/html_with_modules/: index.html
03._Modules/node_commonjs_modules/: index.js  myModule.js
03._Modules/node_es_modules/: index.js  myModule.js
03._Modules/python_modules/: main.py
04_.Encoding_Decoding/node/: index.js
04_.Encoding_Decoding/python/: main.py
05._Python_Enviroments/03_.Poetry_Enviroment/: pyproject.toml
06._Servers/python/: main.py  pyproject.toml
08._Server-to_Server/node/: app.js
08._Server-to_Server/python/: main.py  pyproject.toml
09._Enviroment_Variables/node/: .env_template  index.js
09._Enviroment_Variables/python/: .env_template  main.py  pyproject.toml
10._Date/node/: app.js  index.html  index.js
10._Date/python/: main.py
11._Short_Polling/node/: app.js
12._Long_Polling/node/: app.js
13._Server-sent_Events/node-sse/: app.js
13._Server-sent_Events/python-sse/: main.py  pyproject.toml
14._WebSockets/node-websockets/: clients.js  index.html  server.js
14._WebSockets/python-fastapi/: main.py  pyproject.toml
14._WebSockets/python-plain/: pyproject.toml
15._Github_Webhooks/node-webhooks/: app.js
15._Github_Webhooks/python-webhooks/: main.py  pyproject.toml
16._CORS/: index.html  package-lock.json  package.json
16._CORS/node-CORS/: app.js
16._CORS/python-CORS/: main.py  pyproject.toml
17._Multipart-Forms/: index.html
17._Multipart-Forms/node-multipart-forms/: app.js
17._Multipart-Forms/python-multipart-forms/: main.py  pyproject.toml
18._Images/: base64.html
19._Audio/: index.html
20._MPEG_DASH/: app.js  youtubevideo.html
25._OpenAPI/node-OpenAPI/: app.js
25._OpenAPI/python-OpenAPI/: pyproject.toml
27._Auth_Integration/: app.js  package-lock.json  package.json
28._Payment_Integration/: package.json
(+7 files in other folders)
