[tool.poetry]
name = "03-poetry-enviroment"
version = "0.1.0"
description = ""
authors = ["Mikkel Meerwaldt Jørgensen <Mikkel_m_j@hotmail.com>"]
readme = "README.md"
packages = [{include = "03_"}]

[tool.poetry.dependencies]
python = "^3.12"
emoji = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
