[tool.poetry]
name = "python-plain"
version = "0.1.0"
description = ""
authors = ["Mikkel Meerwaldt Jørgensen <Mikkel_m_j@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
