[tool.poetry]
name = "python-cors"
version = "0.1.0"
description = ""
authors = ["Mikkel Meerwaldt Jørgensen <Mikkel_m_j@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
