[tool.poetry]
name = "python-multipart-forms"
version = "0.1.0"
description = ""
authors = ["Mikkel Meerwaldt Jørgensen <Mikkel_m_j@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.29.0"
fastapi = "^0.110.1"
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
